<resources>
    <string name="app_name">Parstagram</string>
    <string name="description">Description...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="time_created">Time Created</string>
    <string name="username">Username</string>
    <string name="image">Image</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="compose">Compose</string>
    <string name="home">Home</string>
    <string name="screenname">Screenname</string>
    <string name="your_comment_here">Your comment here...</string>
    <string name="comment">Comment</string>
    <string name="title_activity_maps">Map</string>
</resources>