<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activity.PostDetailsActivity">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/ivProfilePic"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/tvUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLike"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="105dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="26dp"
        android:layout_toEndOf="@+id/tvUsername"
        android:text="@string/time_created" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:menu="@menu/menu_bottom_navigation" />

    <ImageView
        android:id="@+id/btnLike"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/ufi_heart" />

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/btnLike"
        android:text="Likes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</RelativeLayout>